<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="Deprecated,UselessParent">

    <ScrollView
        android:id="@+id/setting_tab_set_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AbsoluteLayout
                android:id="@+id/setting_tab_set_al_firstday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_tab_set_tv_firstday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_firstday_title" />

                <LinearLayout
                    android:id="@+id/setting_tab_set_ll_firstday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/setting_tab_set_tv_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/setting_firstday_monday" />

                    <TextView
                        android:id="@+id/setting_tab_set_tv_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/setting_tab_set_right_part_second_margin_left"
                        android:gravity="center"
                        android:text="@string/setting_firstday_sunday" />
                </LinearLayout>
            </AbsoluteLayout>

            <AbsoluteLayout
                android:id="@+id/setting_tab_set_ll_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_tab_set_tv_check_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_check_title" />

                <TextView
                    android:id="@+id/setting_tab_set_tv_point_to_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_check_action" />
            </AbsoluteLayout>

            <AbsoluteLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_tab_set_tv_dynamic_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting_dynamic_bg" />

                <LinearLayout
                    android:id="@+id/setting_tab_set_ll_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/setting_tab_set_tv_switcher_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/setting_dynamic_bg_switcher_open" />

                    <TextView
                        android:id="@+id/setting_tab_set_tv_switcher_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/setting_tab_set_right_part_second_margin_left"
                        android:gravity="center"
                        android:text="@string/setting_dynamic_bg_switcher_close" />
                </LinearLayout>
            </AbsoluteLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>