<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="Deprecated,ContentDescription,UselessParent">

    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <lib.ys.network.image.NetworkImageView
            android:id="@+id/skin_item_iv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/skin_item_install_skin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/skin_name" />

        <TextView
            android:id="@+id/skin_item_install_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_author" />

        <TextView
            android:id="@+id/skin_item_install_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_version" />

        <ImageView
            android:id="@+id/skin_item_iv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/skin_item_iv_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/skin_item_iv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY" />
    </AbsoluteLayout>

</RelativeLayout>